# shader_playground

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  readme.md  voxel-playground.cpp
glew/: glew.pc
resources/: generate.py
resources/shaders/: arrow_fragment.glsl  arrow_vertex.glsl  fragment.glsl  vertex.glsl
resources/shaders/gaussian/: blur-vertex.glsl
resources/shaders/planar/: decal-atlas-fragment.glsl  plane-fragment.glsl  plane-vertex.glsl  radial-fragment.glsl
resources/shaders/simple/: normal-mapper.glsl  simp-fragment.glsl  simp-vertex.glsl
resources/shaders/tube/: tube-fragment.glsl  tube-vertex.glsl
src/: advanced-shader.cpp  advanced-shader.h  camera.cpp  camera.h  fbo.cpp  fbo.h  glass-decals.cpp  glass-decals.h  loader.cpp  loader.h  model.cpp  model.h  procedural.cpp  procedural.h  shader.cpp  shader.h  simple-shader.cpp  simple-shader.h  texture-2d-shader.cpp  texture-2d-shader.h  texture.cpp  texture.h  textures.cpp  textures.h  tube-shader.cpp  tube-shader.h  util.cpp  util.h  vao.cpp  vao.h  vbo.cpp  vbo.h  voxel-playground.cpp  window.cpp  window.h
